--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -5,37 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText android:id="@+id/input_alias"
+    <EditText
+        android:id="@+id/input_alias"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="@string/signInHandle" />
+        android:layout_margin="16dp"
+        android:hint="@string/signInHandle"
+        android:inputType="text" />
 
 
-
-    <EditText android:id="@+id/input_password"
+    <EditText
+        android:id="@+id/input_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:hint="@string/signInPassword"
         android:inputType="textPassword"
-        android:hint="@string/signInPassword"/>
+        android:password="true" />
 
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
         android:padding="12dp"
-        android:text="@string/signIn"/>
+        android:text="@string/signIn" />
 
-    <TextView android:id="@+id/link_signup"
-        android:layout_width="fill_parent"
+    <TextView
+        android:id="@+id/link_signup"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="24dp"
+        android:cursorVisible="true"
+        android:enabled="true"
+        android:fadeScrollbars="true"
+        android:gravity="center|center_horizontal"
         android:text="@string/dontHaveAccount"
-        android:gravity="center"
-        android:textSize="16dip"/>
+        android:textSize="16dip" />
 
 
 </LinearLayout>
