--- a/app/src/main/res/layout/fragment_new_status.xml
+++ b/app/src/main/res/layout/fragment_new_status.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.main.status.StatusFragment">
+    android:orientation="vertical"
+    tools:context=".view.main.status.StatusFragment"
+    android:background="@color/colorWhite">
+
+<!--    <android.support.v7.widget.CardView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:cardCornerRadius="5dp">-->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -29,27 +37,44 @@
             android:textStyle="bold"
             tools:text="@string/sampleUserName" />
 
-<!--        <Icon-->
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="false"
+            android:layout_marginRight="0dp"
+            android:src="@android:drawable/btn_dialog" />
+
+        <!--        <Icon-->
 <!--            android:layout_alignParentEnd="true"-->
 <!--            android:margin="16dp"/>-->
 
     </RelativeLayout>
 
-        <EditText
-            android:id="@+id/editMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/statusPlaceholder"
-            android:layout_below="@id/container"/>
+    <EditText
+        android:id="@+id/editMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/container"
+        android:layout_margin="16dp"
+        android:hint="@string/statusPlaceholder"
+        android:padding="16dp" />
 
-        <TextView
-            android:id="@+id/share"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:gravity="right"
-            android:text="@string/share"
-            android:layout_alignParentBottom="true"
-            android:padding="16dp"
-            />
+    <TextView
+        android:id="@+id/share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/editMessage"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="false"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:padding="16dp"
+        android:text="@string/share" />
+
+    <!--    </android.support.v7.widget.CardView>-->
 
 </RelativeLayout>
