--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,34 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText android:id="@+id/input_alias"
+    <EditText
+        android:id="@+id/input_alias"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="@string/signUpEmail" />
+        android:layout_margin="16dp"
+        android:hint="@string/signUpEmail"
+        android:inputType="textEmailAddress" />
 
 
-
-    <EditText android:id="@+id/input_password"
+    <EditText
+        android:id="@+id/input_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="@string/signInPassword"/>
+        android:layout_margin="16dp"
+        android:hint="@string/signInPassword"
+        android:inputType="textPassword" />
 
-    <Switch
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:orientation="horizontal">
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:checked="false"
+            tools:checked="false" />
+
+        <TextView
+            android:id="@+id/showPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
+            android:text="@string/showPassword" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:padding="12dp"
-        android:text="@string/signUp"/>
+        android:text="@string/signUp" />
 
 
 
