Created signin/ signup activity

--- a/app/src/main/res/layout/status_row.xml
+++ b/app/src/main/res/layout/status_row.xml
@@ -40,10 +40,13 @@
                 android:layout_height="wrap_content"
                 tools:text="@string/sampleAlias" />
 
-            <Space
-                android:layout_width="8dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
+                tools:text="@string/dot" />
 
             <TextView
                 android:id="@+id/statusDate"
