--- a/app/src/main/res/layout/activity_new_status.xml
+++ b/app/src/main/res/layout/activity_new_status.xml
@@ -66,7 +66,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:hint="@string/statusPlaceholder"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:padding="16dp" />
 
             <TextView
