--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -11,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:hint="@string/signUpEmail"
-        android:inputType="textEmailAddress" />
+        android:hint="@string/signInHandle"
+        android:inputType="text" />
 
 
     <EditText
@@ -30,6 +30,7 @@
         android:orientation="horizontal">
 
         <Switch
+            android:id="@+id/switchPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -51,8 +52,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:padding="12dp"
-        android:text="@string/signUp" />
-
-
+        android:text="@string/signUpContinue" />
 
 </LinearLayout>
