--- a/app/src/main/res/layout/activity_user_settings.xml
+++ b/app/src/main/res/layout/activity_user_settings.xml
@@ -14,6 +14,13 @@
         android:scaleType="fitCenter"
         tools:srcCompat="@tools:sample/avatars[12]" />
 
+    <Button
+        android:id="@+id/uploadButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="@string/uploadImage" />
+
     <TextView
         android:id="@+id/editPhoto"
         android:layout_width="wrap_content"
