--- a/app/src/main/res/layout/activity_new_status.xml
+++ b/app/src/main/res/layout/activity_new_status.xml
@@ -69,18 +69,50 @@
                 android:inputType="textMultiLine"
                 android:padding="16dp" />
 
-            <TextView
-                android:id="@+id/share"
+            <LinearLayout
+                android:id="@+id/countBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/editMessage"
+                android:layout_alignParentEnd="true"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/constraint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/maxChar" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/countBox"
+                android:layout_alignParentEnd="true"
+                android:layout_weight="0"
+                android:textColor="#F44336" />
+
+            <Button
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/warning"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:padding="16dp"
-                android:textColor="@color/colorPrimaryDark"
                 android:text="@string/share"
+                android:textColor="@color/colorPrimaryDark"
                 android:visibility="visible"
                 tools:visibility="visible" />
 
