--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -34,18 +34,18 @@
         android:padding="12dp"
         android:text="@string/signIn" />
 
-    <TextView
-        android:id="@+id/link_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="24dp"
-        android:cursorVisible="true"
-        android:enabled="true"
-        android:fadeScrollbars="true"
-        android:gravity="center|center_horizontal"
-        android:text="@string/dontHaveAccount"
-        android:textSize="16dip" />
+<!--    <TextView-->
+<!--        android:id="@+id/link_signup"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center_horizontal"-->
+<!--        android:layout_marginBottom="24dp"-->
+<!--        android:cursorVisible="true"-->
+<!--        android:enabled="true"-->
+<!--        android:fadeScrollbars="true"-->
+<!--        android:gravity="center|center_horizontal"-->
+<!--        android:text="@string/dontHaveAccount"-->
+<!--        android:textSize="16dip" />-->
 
 
 </LinearLayout>
