--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,17 +34,15 @@
                     android:id="@+id/userImage"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true" />
 
-                <Button
-                    android:id="@+id/followButton"
+                <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/fragment_container"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginLeft="-2dp"
-                    android:layout_marginEnd="2dp"
-                    android:text="Follow" />
+                    />
 
             </RelativeLayout>
 
@@ -98,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingEnd="8dp"
-                    android:text="@string/followers" />
+                    android:text="@string/following" />
 
                 <TextView
                     android:id="@+id/numFollowing"
@@ -114,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/following" />
+                    android:text="@string/followers" />
             </LinearLayout>
 
         </LinearLayout>
